<resources>
    <string name="app_name">MindCare</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_mindcare">Welcome to\nMindCare</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_back_login">Welcome Back\nLogin</string>
    <string name="hello_beautiful_nsign_up">Hello Beautiful\nSign Up</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="post">Post</string>
    <string name="profil">Profil</string>
    <string name="_1000_follower">1000 Follower</string>
    <string name="image">Image</string>
    <string name="image_story">Image_Story</string>
    <string name="upload">Upload</string>
    <string name="galery">Galery</string>
    <string name="camera_x">Camera_X</string>
    <string name="warning">Password must be at least 8 characters</string>
    <string name="maps">Maps</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="retry">Retry</string>
    <string name="add_location">Add Location</string>
    <string name="welcoem_to">Welcome to</string>
    <string name="mindcare">MindCare</string>

    <string name="signup_prompt">Don\'t have an account? <a href="#">Sign Up</a></string>

    <string name="login_prompt">Already have an account? <a href="#">Login</a></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hello_good_people">Hello Good People</string>
    <string name="hi_name">👋🏻 Hi Name!</string>
    <string name="kuisioner">Kuisioner</string>
    <string name="history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="mindcare_news">MindCare News</string>
    <string name="news">News</string>
    <string name="email">Email</string>
    <string name="pertanyaan_kuis_akan_ditampilkan_di_sini">Pertanyaan kuis akan ditampilkan di sini</string>
    <string name="pilihan_jawaban_1">Pilihan jawaban 1</string>
    <string name="pilihan_jawaban_2">Pilihan jawaban 2</string>
    <string name="pilihan_jawaban_3">Pilihan jawaban 3</string>
    <string name="pilihan_jawaban_4">Pilihan jawaban 4</string>
    <string name="con">Continue</string>
    <string name="hasil_tes_anda_menandakan_depresi_sedang">Hasil tes anda menandakan depresi sedang</string>
    <string name="kamu_masih_menjalani_kegiatan_sehari_hari_namun_dengan_bersusah_payah_mungkin_kamu_merasa_lelah_secara_fisik_dan_emosional_pada_akhir_hari_dapatkan_bantuan_ahli_untuk_memahami_pikiran_perasaan_dan_gejala_yang_kamu_alami">Kamu masih menjalani kegiatan sehari-hari, namun dengan bersusah payah. Mungkin, kamu merasa lelah secara fisik dan emosional pada akhir hari. Dapatkan bantuan ahli untuk memahami pikiran, perasaan, dan gejala yang kamu alami.</string>
    <string name="hasil">Hasil</string>

    <string name="depression_category">Kategori Depresi: %s</string>
    <string name="anxiety_category">Kategori Kecemasan: %s</string>
    <string name="stress_category">Kategori Stres: %s</string>
    <string name="save">Save</string>
</resources>